[package]
name = "bevymesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.12", features = ["dynamic_linking"]}
bevy_panorbit_camera = "0.9.2"


[profile-dev]
apt-level = 1

[profile.dev.package."*"]
apt-level = 3
